# insighta-cli

./: .gitignore  Cargo.toml  README.md  install.sh
.github/workflows/: ci.yml
src/: auth.rs  cli.rs  client.rs  config.rs  credentials.rs  error.rs  main.rs  output.rs  profiles.rs  tests.rs
