[package]
name = "insighta-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
clap = { version = "4.6.1", features = ["derive"] }
comfy-table = "7.2.2"
dirs = "6.0.0"
hex = "0.4.3"
indicatif = "0.18.4"
open = "5.3.4"
rand = "0.10.1"
reqwest = { version = "0.13.2", features = ["json", "query"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0"
tokio = { version = "1.52.1", features = ["full"] }


[[bin]]
name = "insighta"
path = "src/main.rs"
